<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tv"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_model_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_model_one"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_model_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_model_two"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_model_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_model_three"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_model_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_model_four"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_model_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_model_five"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="8dp"/>

</LinearLayout>